[FIX] DataContext added

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-P6704GK; Database=dotnet-rpg; Trusted_Connection=true; TrustServerCertificate=true;"
+  }
 }
